--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -5,21 +5,132 @@ output:
     keep_md: true
 ---
 
+```{r}
+knitr::opts_chunk$set(echo = TRUE)
 
-## Loading and preprocessing the data
+# Load librarys
 
+library(ggplot2) 
 
+## Loading the data
 
+activity <- read.csv("activity.csv")
+
+## Preprocessing the data
+
+activity$date <- as.Date(activity$date, format = "%Y-%m-%d")
+activity$interval <- as.factor(activity$interval)
+
+str( activity)
+without_na <- activity[complete.cases(activity),]
 ## What is mean total number of steps taken per day?
 
+  #1.Calculate the total number of steps taken per day
+    ## (total number of (steps taken per day))
+    total <- aggregate(steps ~ date, without_na, sum)
 
+    names(total)[2] <- "sum_steps"
+    ## check out new data frame
+    head(total, 5)
+  # Make a histogram of the total number of steps taken each day
+  ## plot histogram, using breaks purely for better visuals.
+    hist(
+            total$sum_steps,
+            col = "blue",
+            main = "Histogram of the (Total Number of (Steps Taken Each Day))",
+            xlab = "(Total Number of (Steps Taken Each Day))",
+            breaks = 20
+    )
+
+    ## mean
+    mean(total$sum_steps)
+    ## median
+    median(total$sum_steps)
 
 ## What is the average daily activity pattern?
+## the average number of steps taken, averaged across all days for each 5-minute interval
+    interval <- aggregate(steps ~ interval, without_na, mean)
+    
+    names(interval)[2] <- "mean_steps"
 
-
+    ## format plot margins to accommodate long text labels.
+    par(mai = c(1.2,1.5,1,1))
+    #Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number     of steps taken, averaged across all days (y-axis)
+    
+    ## plot time series
+    plot(
+            x = interval$interval,
+            y = interval$mean_steps,
+            type = "l",
+            main = "Time Series Plot of the 5-Minute Interval\n and the Average Number of Steps Taken, Averaged Across All Days",
+            xlab = "5-Minute Interval",
+            ylab = "Average Number of Steps Taken,\n Averaged Across All Days"
+    )
 
 ## Imputing missing values
+    #Calculate and report the total number of missing values in the dataset (i.e. the total number of       rows with NAs)
+    nrow(activity[is.na(activity$steps),])
+    
+    ## Are there differences in activity patterns between weekdays and weekends?
+    ## merge original activity data frame with interval data frame
+    newactivity <- merge(activity, interval, by = 'interval', all.y = F)
+    
+    ## Create a new dataset that is equal to the original dataset but with the missing data filled in.
+    newactivity$steps[is.na(newactivity$steps)] <- as.integer(
+            round(newactivity$mean_steps[is.na(newactivity$steps)]))
 
+    ## drop and reorder columns to match original activity data frame
+    keeps <- names(activity)
+    newactivity <- newactivity[keeps]
+    # 4.Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day
+    ## (total number of (steps taken per day))
+    newtotal <- aggregate(steps ~ date, newactivity, sum)
+    
+    ## add descriptive variable names
+    names(newtotal)[2] <- "sum_steps"
+    
+    ## check out new data frame
+    head(newtotal, 5)
+    ## plot histogram, using breaks purely for better visuals.
+    hist(
+            newtotal$sum_steps,
+            col = "blue",
+            main = "Histogram of the (Total Number of (Steps Taken Each Day))\nPart Deux",
+            xlab = "(Total Number of (Steps Taken Each Day)) Part Deux",
+            breaks = 20
+    )
 
+  ## mean
+  mean(newtotal$sum_steps)
+  ## median
+  median(newtotal$sum_steps)
 
-## Are there differences in activity patterns between weekdays and weekends?
+#Are there differences in activity patterns between weekdays and weekends?
+    #1.Create a new factor variable in the dataset with two levels - "weekday" and "weekend" indicating     whether a given date is a weekday or weekend day..
+    ## create new data frame
+    n_activity <- newactivity
+    weekend <- weekdays(as.Date(n_activity$date)) %in% c("Saturday", "Sunday")
+    ## Fill in weekday column
+    n_activity$daytype <- "weekday"
+    ## replace "weekday" with "weekend" where day == Sat/Sun
+    n_activity$daytype[weekend == TRUE] <- "weekend"
+    ## convert new character column to factor
+    n_activity$daytype <- as.factor(n_activity$daytype)
+    weekdays(as.Date(n_activity$date[3]))
+    #2.Make a panel plot containing a time series plot (i.e. type = "l") of the 5-minute interval             (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days          (y-axis)
+       newinterval <- aggregate(steps ~ interval + daytype, n_activity, mean)
+      ## add descriptive variable names
+      names(newinterval)[3] <- "mean_steps"
+
+    ## plot time series
+    library(lattice)
+    xyplot(
+            mean_steps ~ interval | daytype,
+            newinterval,
+            type = "l",
+            layout = c(1,2),
+            main = "Time Series Plot of the 5-Minute Interval(x-axis)and the Average Number of Steps      Taken,Averaged Across All Weekday Days or Weekend Days(y-axis)",
+            xlab = "5-Minute Interval",
+            ylab = "Average Number of Steps Taken"
+    )
+```
